src/objects/KS_Productos_de_cliente__c.object
<CustomObject>
    <description>KAIZENSTEP. ACTIVO. Define la relación de un distribuidor con productos tanto de SIMON como de la Competencia</description>
    <fields>
        <fullName>KS_Distribuidor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distribuidor</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Distribuidores SAP</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Distribuidores CRM</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Productos de clientes</relationshipLabel>
        <relationshipName>Productos_de_clientes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Nombre_producto__c</fullName>
        <formula>KS_Producto__r.KS_Nombre_producto__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre producto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Producto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Producto</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Productos de clientes</relationshipLabel>
        <relationshipName>Productos_de_clientes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Relacion_con_producto__c</fullName>
        <label>Relación con producto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Relacion_Producto</valueSetName>
        </valueSet>
    </fields>
    <label>Producto de cliente</label>
    <nameField>
        <displayFormat>idPC-{00000}</displayFormat>
        <label>idPC</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Productos de clientes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>